# speech_pipeline_prototype

./: .gitignore  README.md  pyproject.toml
benchmarks/configs/: baseline-500.json  beam-search.json  current-raw.json  current.json  endpoint-1200-padding-800.json  endpoint-1400-padding-800.json  endpoint-2200.json  fp32.json  padding-800.json
samples/: README.md
scripts/: download_models.py  setup_benchmark_mac.sh
scripts/systemd/: speech-transcript-pipeline.service
speech_proto/: __init__.py  app.py  asr.py  audio_source.py  audio_utils.py  benchmark.py  benchmark_suite.py  cli.py  events.py  metrics.py  pipeline.py  preprocess.py  recordings.py  segmenter.py  sentence_assembler.py  transcript_assembler.py
static/: app.js  index.html  styles.css
tests/: test_app.py  test_asr.py  test_audio_source.py  test_benchmark.py  test_benchmark_suite.py  test_event_shapes.py  test_metrics.py  test_segmenter.py  test_sentence_assembler.py  test_transcript_assembler.py
