[project]
name = "speech-transcript-pipeline"
version = "0.1.0"
description = "Offline speech-to-text prototype for Raspberry Pi 5 with modular audio pipeline and Web UI diagnostics."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "huggingface-hub>=1.16.1",
    "numpy>=1.26.0",
    "onnxruntime>=1.26.0",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "sherpa-onnx>=1.12.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.1",
    "soxr>=0.5.0",
    "uvicorn[standard]>=0.30.0",
    "webrtc-noise-gain>=1.2.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[project.scripts]
speech-proto = "speech_proto.app:main"
speech-proto-benchmark = "speech_proto.cli:main"
speech-proto-benchmark-suite = "speech_proto.benchmark_suite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speech_proto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
